--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
                 </div>
                 <div class="row">
                     <!-- <div class="col-lg-4 col-sm-6 mb-4">
-                        <div class="projects-item">
-                            <a class="projects-link" data-toggle="modal" href="#projectsModalMetereological">
-                                <div class="projects-hover">
+                        <div class="portfolio-item">
+                            <a class="portfolio-link" data-toggle="modal" href="#projectsModalMetereological">
+                                <div class="portfolio-hover">
                                     <div class="portfolio-hover-content">
                                         <h3>Read More</h3>
                                     </div>
@@ -131,22 +131,22 @@
                         </div>
                     </div> -->
 
-                    <!-- <div class="col-lg-4 col-sm-6 mb-4">
+                    <div class="col-lg-4 col-sm-6 mb-4">
                         <div class="portfolio-item">
-                            <a class="portfolio-link" data-toggle="modal" href="#portfolioModalGinga">
+                            <a class="portfolio-link" data-toggle="modal" href="#projectsModalGinga">
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content">
                                         <h3>Read More</h3>
                                     </div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/manage.jpg" alt=""/>
+                                <img class="img-fluid" src="assets/img/projects/ginga/logo.png" alt=""/>
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Ginga</div>
-                                <div class="portfolio-caption-subheading text-muted">HTML, CSS e JavaScript</div>
+                                <div class="portfolio-caption-heading">Ginga NCL</div>
+                                <div class="portfolio-caption-subheading text-muted">Multimedia</div>
                             </div>
                         </div>
-                    </div> -->
+                    </div>
 
                     <div class="col-lg-4 col-sm-6 mb-4">
                         <div class="portfolio-item">
@@ -357,7 +357,7 @@
         </div> -->
         
         <!-- Modal Ginga-->
-        <!-- <div class="portfolio-modal modal fade" id="projectsModalGinga" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="portfolio-modal modal fade" id="projectsModalGinga" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="close-modal" data-dismiss="modal"><img src="assets/img/close-icon.svg" /></div>
@@ -365,16 +365,30 @@
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
                                 <div class="modal-body">
-                                    <h2 class="text-uppercase">Manage Landing</h2>
-                                    <p class="item-intro text-muted">Desenvolvido em desafio do Frontend Mentor</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/projects/manage.jpg" alt="" />
-                                    <p>Com este projeto desenvolvido seguindo o layout apresentado pelo desafio, pude colocar em prática todo meu conhecimento adquirido em cursos e estudos anteriores, utilizando um pouco de JavaScript e muito CSS Grid e Flexbox. Para mais informações acesse o repositório do site.</p>
+                                    <h2 class="text-uppercase">Ginga NCL</h2>
+                                    <p class="item-intro text-muted">A middleware of the Japanese-Brazilian Digital TV System</p>
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/projects/ginga/logo.png" alt="" />
+                                    <p class="text-muted-justified">
+                                        Ginga® is the middleware of the Japanese-Brazilian Digital TV System (ISDB-TB) and ITU-T Recommendation for IPTV services.
+                                        Ginga-NCL Presentation Environment is the required logical subsystem of Ginga, responsible for running NCL applications. 
+                                        NCL is an XML application language that provides support for specifying spatio-temporal synchronization among media objects, media content and presentation alternatives, exhibition on multiple devices, and live producing of interactive non-linear programs.
+                                    </p>
+                                    <p class="text-muted-justified">
+                                        In this project, I worked mainly on the rebuilding of video player used by Ginga. 
+                                        This new video player was developed using C++, GStreamer to decode audio and video, and Cairo to 2D rendering. 
+                                        Moreover, some audio and video properties described on NCL were enabled (e.g., balanceLevel, trebleLevel, bassLevel, freeze).
+                                        Figure below presents Ginga playing an application.
+                                    </p>
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/projects/ginga/playing.png" alt="" />
+                                    <p class="text-muted-justified">
+                                        Ginga-NCL was developed and is maintained by <a class="link" target="_blank" href="http://telemidia.puc-rio.br/">TeleMidia Lab.</a> at <a class="link" target="_blank" href="https://www.puc-rio.br/">PUC-Rio</a>.
+                                    </p>
+
                                     <ul class="list-inline">
-                                        <li>Data: Abril 2020</li>
-                                        <li>Tecnologias: HTML, CSS Grid e JavaScript</li>
-                                        <li><a target="_blank" href="#">Site</a></li>
-                                        <li><a target="_blank" href="#">Repositório</a></li>
+                                        <li>Site: <a target="_blank" href="http://ginga.org.br/">http://ginga.org.br</a></li> 
+                                        <li>Repository: <a target="_blank" href="https://github.com/TeleMidia/ginga">GitHub</a></li>
                                     </ul>
+
                                     <button class="btn btn-primary" data-dismiss="modal" type="button"><i class="fas fa-times mr-1"></i>Close Project</button>
                                 </div>
                             </div>
@@ -382,7 +396,7 @@
                     </div>
                 </div>
             </div>
-        </div> -->
+        </div>
 
         <!-- Modal Cacuria-->
         <div class="portfolio-modal modal fade" id="projectsModalCacuria" tabindex="-1" role="dialog" aria-hidden="true">
