interface in png

--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                                         This tool was built using Python and Javascript. 
                                         In particular, all the visualizations (total of 141) were designed using Plotly, which provides interactivity, such as zoom in, zoom out, pan, select, toggle spike lines, and mouse hover.
                                     </p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/projects/eduvis/interface.jpg" alt="" />
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/projects/eduvis/interface.png" alt="" />
                                     <p class="text-muted-justified">
                                         We captured evidence of their acceptance of our proposal and obtained instructors’ feedback about the tool such as their both analysis and visualization preferences.
                                         The combination of the answers to the research questions yields a framework to enable Virtual Learning Environments to assist instructors in gaining insights about both students’ behavior and performance. 
