--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                                     </p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/projects/eduvis/model.png" alt="" />
                                     <p class="text-muted-justified">
-                                        We developed EDUVIS 1 as an open source online tool to assemble dashboards based on our proposed model. 
+                                        We developed EDUVIS as an open source online tool to assemble dashboards based on our proposed model. 
                                         This tool was built using Python and Javascript. 
                                         In particular, all the visualizations (total of 141) were designed using Plotly, which provides interactivity, such as zoom in, zoom out, pan, select, toggle spike lines, and mouse hover.
                                     </p>
@@ -377,7 +377,7 @@
                                     </p>
                                     <p class="text-muted-justified">
                                         The documents provided on PDF files had their text extracted, and analyzed to identify patterns.
-                                        We explored some approaches to build a vector representation of these documents and we adopted a <a class="link" target="_blank" href='http://nilc.icmc.usp.br/embeddings'>model pre-trained using word embeddings</a> focused in text written in portuguese released by USP (Universidade de São Paulo).
+                                        We explored some approaches to build a vector representation of these documents and we adopted a <a class="link" target="_blank" href='http://nilc.icmc.usp.br/embeddings'>pre-trained model using word embeddings</a> focused on text written in portuguese released by USP (Universidade de São Paulo).
                                         Then, to identify the text similarity, we calculate and sort by cosine distance among vectors.
                                         We deploy this service as an API rest.
                                     </p>
@@ -446,7 +446,7 @@
                                     <img class="img-fluid d-block mx-auto" src="assets/img/projects/cacuria/logo.png" alt="" />
                                     <p class="text-muted-justified">
                                         Cacuriá is an authoring tool designed to create educational content (aka learning objects) for the Web and Interactive Digital TV environments.
-                                        The purpose of this tool is to enable education professionals to create learning objects through an intuitive process, which is designed and crafted by the teacher himself. 
+                                        This project was my M.Sc. research. The purpose of this tool is to enable education professionals to create learning objects through an intuitive process, which is designed and crafted by the teacher himself. 
                                         This process is based on educational videos, which will be enriched by the professional directly (without the need of a programmer or designer) and also by adding multimedia content (image, audio, text etc).
                                     </p>
                                     <p class="text-muted-justified">
