--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
                                         The documents provided on PDF files had their text extracted, and analyzed to identify patterns.
                                         We explored some approaches to build a vector representation of these documents and we adopted a <a class="link" target="_blank" href='http://nilc.icmc.usp.br/embeddings'>pre-trained model using word embeddings</a> focused on text written in portuguese released by USP (Universidade de São Paulo).
                                         Then, to identify the text similarity, we calculate and sort by cosine distance among vectors.
-                                        We deploy this service as an API rest.
+                                        We deployed this service as an API rest.
                                     </p>
                                     
                                     <button class="btn btn-primary" data-dismiss="modal" type="button"><i class="fas fa-times mr-1"></i>Close Project</button>
@@ -444,14 +444,14 @@
                                     <p class="item-intro text-muted">A recommendation system to assign prosecutors in court proceedings</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/projects/distribution/logo.png" alt="" />
                                     <p class="text-muted-justified">
-                                        This project aimed to help the Public Prosecution from Rio de Janeiro in assigning fit prosecutors according to subject .
-                                        Therefore, we conducted analysis and exploration of data from <a class="link" target="_blank" href='http://www.mprj.mp.br'>Public Prosecution</a> and <a class="link" target="_blank" href='http://www.tjrj.jus.br'>Court of Law</a> from Rio de Janeiro.
+                                        This project aimed to help the <a class="link" target="_blank" href='http://www.mprj.mp.br'>Public Prosecution from Rio de Janeiro</a> in assigning fit prosecutors according to subject .
+                                        Therefore, we conducted analysis and exploration of data from Public Prosecution and <a class="link" target="_blank" href='http://www.tjrj.jus.br'>Court of Law from Rio de Janeiro</a>.
                                     </p>
                                     <p class="text-muted-justified">
                                         Firstly, we explored and analyzed these data using statistical.
                                         Through these analyses, we identified important correlations.
                                         Then, we developed a model using a machine learning technique to provide the fit prosecutor.
-                                        We deploy this service as an API rest.
+                                        Finally, we deployed this service as an API rest.
                                     </p>
                                     
                                     <button class="btn btn-primary" data-dismiss="modal" type="button"><i class="fas fa-times mr-1"></i>Close Project</button>
