--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
                         <!-- <span class="fa-stack fa-4x"><i class="fas fa-circle fa-stack-2x text-primary"></i><i class="fab fa-js-square fa-stack-1x fa-inverse"></i></span> -->
                         <!-- <h4 class="my-3">JavaScript</h4> -->
                         <p class="text-muted-justified">
-                            Hello, my name is <b>André Luiz</b>, I am computer scientist with and I have experience as a developer in multimedia, data science, and machine learning.
+                            Hello, my name is <b>André Luiz</b>, I am computer scientist and I have experience as a developer in multimedia, data science, and machine learning.
                         </p>
                         <p class="text-muted-justified">    
                             I have a solid academic background, with a Ph.D. in Informatics (2020) from the <a class="link" target="_blank" href="https://www.puc-rio.br">Pontifícia Universidade Católica do Rio de Janeiro (PUC-Rio)</a> in the Data Science field. 
                             My M.Sc. (2015) and a Bachelor’s degrees (2012) in Computer Science are from the <a class="link" target="_blank" href="https://portais.ufma.br/PortalUfma/">Universidade Federal do Maranhão (UFMA)</a> in Brazil in the Multimedia field. 
                         </p>
                         <p class="text-muted-justified">    
-                            Currently, I work as Data Scientist at <a class="link" target="_blank" href="http://exacta.inf.puc-rio.br">ExACTa – PUC-Rio</a>, where I perform projects that uses artificial intelligence, data analysis, data exploration, real-time analytics, and process mining to <a class="link" target="_blank" href="https://petrobras.com.br/en/">Petrobras</a>, a large company of Oil & Gas in Brazil. 
+                            Currently, I work as Data Scientist at <a class="link" target="_blank" href="http://exacta.inf.puc-rio.br">ExACTa – PUC-Rio</a>, where I perform projects that uses artificial intelligence, data analysis, data exploration, real-time analytics, and process mining to <a class="link" target="_blank" href="https://petrobras.com.br/en/">Petrobras</a>, the leading company of Oil & Gas in Brazil. 
                             My educational background has an emphasis on software development, data science, machine learning, and multimedia systems.
                         </p>
                     </div>
