--- a/index.html
+++ b/index.html
@@ -386,8 +386,11 @@
                                     </p>
                                     <ul class="list-inline">
                                         <li>EDUVIS: <a class="link" target="_blank" href="http://eduvis.pythonanywhere.com">http://eduvis.pythonanywhere.com</a></li>
-                                        <li>Thesis: <a class="link" target="_blank" href="https://doi.org/10.17771/PUCRio.acad.50335"></a></li>
-                                        <li>More information: <a class="link" target="_blank" href="https://www.researchgate.net/project/Learning-Analytics-Studies">Papers</a></li>
+                                        <!-- <li>Repository: <a class="link" target="_blank" href="#"></a></li> -->
+                                        <li>More information:
+                                            <a class="link" target="_blank" href="https://www.researchgate.net/project/Learning-Analytics-Studies">Papers, </a>
+                                            <a class="link" target="_blank" href="https://doi.org/10.17771/PUCRio.acad.50335">Thesis</a>
+                                        </li>
                                     </ul>
 
                                     <button class="btn btn-primary" data-dismiss="modal" type="button"><i class="fas fa-times mr-1"></i>Close Project</button>
