Adding Data Science Analyses

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                 <ul class="navbar-nav text-uppercase ml-auto">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About me</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#publications">Publications</a>
-                    </li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#analyses">Analyses</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#publications">Publications</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
                 </ul>
@@ -88,7 +88,7 @@
     </section>
 
     <!-- Projects-->
-    <section class="page-section bg-light" id="projects">
+    <section class="page-section bg-light portfolio-section" id="projects">
         <div class="container">
             <div class="text-center">
                 <h2 class="section-heading text-uppercase">Projects</h2>
@@ -107,7 +107,8 @@
                         </a>
                         <div class="portfolio-caption">
                             <div class="portfolio-caption-heading">IAGO</div>
-                            <div class="portfolio-caption-subheading text-muted">Data Science</div>
+                            <div class="portfolio-caption-subheading text-muted"><b>Data Science, Machine Learnig</b></div>
+                            <div class="portfolio-caption-subheading text-muted">python, pandas, numpy, matplotlib, plotly, scikit-learn, power bi</div>
                         </div>
                     </div>
                 </div>
@@ -124,7 +125,8 @@
                         </a>
                         <div class="portfolio-caption">
                             <div class="portfolio-caption-heading">Eduvis</div>
-                            <div class="portfolio-caption-subheading text-muted">Data Science</div>
+                            <div class="portfolio-caption-subheading text-muted"><b>Data Science, Machine Learnig</b></div>
+                            <div class="portfolio-caption-subheading text-muted">python, pandas, numpy, plotly, scikit-learn, flask, javascript</div>
                         </div>
                     </div>
                 </div>
@@ -141,7 +143,8 @@
                         </a>
                         <div class="portfolio-caption">
                             <div class="portfolio-caption-heading">Text Similarity</div>
-                            <div class="portfolio-caption-subheading text-muted">Data Science</div>
+                            <div class="portfolio-caption-subheading text-muted"><b>Data Science, Machine Learnig</b></div>
+                            <div class="portfolio-caption-subheading text-muted">python, pandas, numpy, scikit-learn</div>
                         </div>
                     </div>
                 </div>
@@ -158,7 +161,8 @@
                         </a>
                         <div class="portfolio-caption">
                             <div class="portfolio-caption-heading">Distribution of Court Proceedings</div>
-                            <div class="portfolio-caption-subheading text-muted">Data Science</div>
+                            <div class="portfolio-caption-subheading text-muted"><b>Data Science, Machine Learnig</b></div>
+                            <div class="portfolio-caption-subheading text-muted">python, pandas, numpy, plotly, scikit-learn, tableau, flask</div>
                         </div>
                     </div>
                 </div>
@@ -175,7 +179,8 @@
                         </a>
                         <div class="portfolio-caption">
                             <div class="portfolio-caption-heading">Ginga NCL</div>
-                            <div class="portfolio-caption-subheading text-muted">Multimedia</div>
+                            <div class="portfolio-caption-subheading text-muted"><b>Embedded Systems, Multimedia</b></div>
+                            <div class="portfolio-caption-subheading text-muted"> c, c++, gstreamer, lua, ncl, gdb</div>
                         </div>
                     </div>
                 </div>
@@ -192,7 +197,74 @@
                         </a>
                         <div class="portfolio-caption">
                             <div class="portfolio-caption-heading">Cacuriá</div>
-                            <div class="portfolio-caption-subheading text-muted">Multimedia</div>
+                            <div class="portfolio-caption-subheading text-muted"><b>Multimedia</b></div>
+                            <div class="portfolio-caption-subheading text-muted"> c++, qt, javascript, ncl, lua</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Analyses -->
+    <section class="page-section bg-light portfolio-section" id="analyses">
+        <div class="container">
+            <div class="text-center">
+                <h2 class="section-heading text-uppercase">Analyses</h2>
+                <h3 class="section-subheading text-muted">Below are a few of my notebooks.</h3>
+            </div>
+            
+            <div class="row">                
+                <div class="col-lg-4 col-sm-6 mb-4">
+                    <div class="portfolio-item">
+                        <a class="portfolio-link" target="_blank" href="https://htmlpreview.github.io/?https://github.com/andrelbd1/teaching-data-science/blob/master/11.%20Practice%20-%20Consumers%20Complaints.html">
+                            <div class="portfolio-hover">
+                                <div class="portfolio-hover-content">
+                                    <h3>Read More</h3>
+                                </div>
+                            </div>
+                            <img class="img-fluid" src="assets/img/analyses/customer-complaints/logo.jpg" alt="" />
+                        </a>
+                        <div class="portfolio-caption">
+                            <div class="portfolio-caption-heading">Customer Complaints</div>
+                            <div class="portfolio-caption-subheading text-muted"><b>Data Science</b></div>
+                            <div class="portfolio-caption-subheading text-muted">python, pandas, numpy, matplotlib, seaborn</div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-sm-6 mb-4">
+                    <div class="portfolio-item">
+                        <a class="portfolio-link" target="_blank" href="https://htmlpreview.github.io/?https://github.com/andrelbd1/teaching-data-science/blob/master/10.%20Practice%20-%20IMDb.html">
+                            <div class="portfolio-hover">
+                                <div class="portfolio-hover-content">
+                                    <h3>Read More</h3>
+                                </div>
+                            </div>
+                            <img class="img-fluid" src="assets/img/analyses/imdb/logo.png" alt="" />
+                        </a>
+                        <div class="portfolio-caption">
+                            <div class="portfolio-caption-heading">IMDb</div>
+                            <div class="portfolio-caption-subheading text-muted"><b>Data Science</b></div>
+                            <div class="portfolio-caption-subheading text-muted">python, pandas, numpy, matplotlib, seaborn</div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-sm-6 mb-4">
+                    <div class="portfolio-item">
+                        <a class="portfolio-link" target="_blank" href="https://htmlpreview.github.io/?https://github.com/andrelbd1/teaching-data-science/blob/master/09.%20Practice%20-%20Titanic.html">
+                            <div class="portfolio-hover">
+                                <div class="portfolio-hover-content">
+                                    <h3>Read More</h3>
+                                </div>
+                            </div>
+                            <img class="img-fluid" src="assets/img/analyses/titanic/logo.jpg" alt="" />
+                        </a>
+                        <div class="portfolio-caption">
+                            <div class="portfolio-caption-heading">Titanic</div>
+                            <div class="portfolio-caption-subheading text-muted"><b>Data Science</b></div>
+                            <div class="portfolio-caption-subheading text-muted">python, pandas, numpy</div>
                         </div>
                     </div>
                 </div>
