--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                         <a class="portfolio-link" target="_blank" href="https://htmlpreview.github.io/?https://github.com/andrelbd1/teaching-data-science/blob/master/11.%20Practice%20-%20Consumers%20Complaints.html">
                             <div class="portfolio-hover">
                                 <div class="portfolio-hover-content">
-                                    <h3>Read More</h3>
+                                    <h3>Open Notebook</h3>
                                 </div>
                             </div>
                             <img class="img-fluid" src="assets/img/analyses/customer-complaints/logo.jpg" alt="" />
@@ -238,7 +238,7 @@
                         <a class="portfolio-link" target="_blank" href="https://htmlpreview.github.io/?https://github.com/andrelbd1/teaching-data-science/blob/master/10.%20Practice%20-%20IMDb.html">
                             <div class="portfolio-hover">
                                 <div class="portfolio-hover-content">
-                                    <h3>Read More</h3>
+                                    <h3>Open Notebook</h3>
                                 </div>
                             </div>
                             <img class="img-fluid" src="assets/img/analyses/imdb/logo.png" alt="" />
@@ -256,7 +256,7 @@
                         <a class="portfolio-link" target="_blank" href="https://htmlpreview.github.io/?https://github.com/andrelbd1/teaching-data-science/blob/master/09.%20Practice%20-%20Titanic.html">
                             <div class="portfolio-hover">
                                 <div class="portfolio-hover-content">
-                                    <h3>Read More</h3>
+                                    <h3>Open Notebook</h3>
                                 </div>
                             </div>
                             <img class="img-fluid" src="assets/img/analyses/titanic/logo.jpg" alt="" />
@@ -303,6 +303,18 @@
                             <p class="text-muted"><a class="link" target="_blank"
                                     href="https://www.puc-rio.br">Pontifícia Universidade Católica do Rio de Janeiro</a>
                             </p>
+                            <p><b>Advisor:</b> <a class="link" target="_blank"
+                                href="http://www-di.inf.puc-rio.br/~simone/">Simone Diniz Junqueira Barbosa</a>
+                            </p>
+                            <p><b>Activities:</b> 
+                                Working on models for Visual Learning Analytics to support instructors in the analysis of student logs from Virtual Learning Environment in order to support them in the decision making.
+                            </p>
+                            <p><a class="link" target="_blank"
+                                    href="https://www.researchgate.net/project/Learning-Analytics-Studies">Papers,
+                                </a>
+                                <a class="link" target="_blank"
+                                    href="https://doi.org/10.17771/PUCRio.acad.50335">Thesis</a>
+                            </p>
                         </div>
                     </div>
                 </li>
@@ -316,7 +328,18 @@
                         </div>
                         <div class="timeline-body">
                             <p class="text-muted"><a class="link" target="_blank"
-                                    href="https://portais.ufma.br/PortalUfma/">Universidade Federal do Maranhão</a></p>
+                                    href="https://portais.ufma.br/PortalUfma/">Universidade Federal do Maranhão</a>
+                            </p>
+                            <p><b>Advisor:</b> <a class="link" target="_blank"
+                                href="https://sigaa.ufma.br/sigaa/public/docente/portal.jsf?siape=1460695&lc=en_US">Carlos de Salles Soares Neto</a>
+                            </p>                            
+                            <p><b>Activities:</b> 
+                                Working on the Cacuriá development project, an authoring tool for multimedia Learning Objects (LOs) to allow teachers to create multimedia educational content for interactive TV and the Web without requiring programming skills. Cacuriá is integrated with the iVoD (Interactive Video on Demand) service from RNP, a National Research and Educational Network responsible for promoting the development of networks in Brazil, including the development of innovative applications and services.
+                            </p>
+                            <p><a class="link" target="_blank"
+                                href="https://www.researchgate.net/project/Grupo-de-Trabalho-de-Videos-como-Objetos-de-Aprendizagem-GT-VoA">Papers
+                                </a>                                
+                            </p>
                         </div>
                     </div>
                 </li>
@@ -330,7 +353,11 @@
                         </div>
                         <div class="timeline-body">
                             <p class="text-muted"><a class="link" target="_blank"
-                                    href="https://portais.ufma.br/PortalUfma/">Universidade Federal do Maranhão</a></p>
+                                    href="https://portais.ufma.br/PortalUfma/">Universidade Federal do Maranhão</a>
+                            </p>
+                            <p><b>Advisor:</b> <a class="link" target="_blank"
+                                href="https://sigaa.ufma.br/sigaa/public/docente/portal.jsf?siape=1460695&lc=en_US">Carlos de Salles Soares Neto</a>
+                            </p>                            
                         </div>
                     </div>
                 </li>
