--- a/index.html
+++ b/index.html
@@ -74,13 +74,11 @@
                             (UFMA)</a> in Brazil in the Multimedia field.
                     </p>
                     <p class="text-muted-justified">
-                        My strong interests are in software development, data science, machine learning, and multimedia
-                        systems.
+                        My strong interests are in software engineering, data science, machine learning, and data engineering.
                     </p>
                     <p class="text-muted-justified">
-                        Currently, I work as Head of Data Science at <a class="link" target="_blank"
-                            href="https://www.gaivota.ai/">Gaivota</a>, a Vertical SaaS to connect and optimize the
-                        agribusiness ecosystem.
+                        Currently, I work as Data Science Manager at <a class="link" target="_blank"
+                            href="https://www.seedz.ag/">Seedz</a>, a Vertical SaaS to connect and optimize the agribusiness ecosystem.
                     </p>
                 </div>
             </div>
@@ -442,7 +440,7 @@
                                     Firstly, we explored and analyzed data from refinery using statistical methods and
                                     visualization techniques.
                                     Through these analyses, we identified important correlations and insights with
-                                    meteorological data, such as both wind direction and speed, humidity amd
+                                    meteorological data, such as both wind direction and speed, humidity and
                                     temperature.
                                 </p>
                                 <img class="img-fluid d-block mx-auto" src="assets/img/projects/iago/visualization.png"
@@ -635,19 +633,17 @@
                                 <img class="img-fluid d-block mx-auto" src="assets/img/projects/distribution/logo.png"
                                     alt="" />
                                 <p class="text-muted-justified">
-                                    This project aimed to help the <a class="link" target="_blank"
-                                        href='http://www.mprj.mp.br'>Public Prosecution from Rio de Janeiro</a> in
-                                    assigning fit prosecutors according to subject .
-                                    Therefore, we conducted analysis and exploration of data from Public Prosecution and
-                                    <a class="link" target="_blank" href='http://www.tjrj.jus.br'>Court of Law from Rio
-                                        de Janeiro</a>.
+                                    I had the opportunity to work on a project that aimed to assist the 
+                                    <a class="link" target="_blank" href='http://www.mprj.mp.br'>Public Prosecution 
+                                    from Rio de Janeiro</a> in assigning the most suitable prosecutors to each case.
                                 </p>
                                 <p class="text-muted-justified">
-                                    Firstly, we explored and analyzed these data using statistical.
-                                    Through these analyses, we identified important correlations.
-                                    Then, we developed a model using a machine learning technique to provide the fit
-                                    prosecutor.
-                                    Finally, we deployed this service as an API rest.
+                                    Through statistical methods, we analyzed and explored data from both the Public 
+                                    Prosecution and <a class="link" target="_blank" href='http://www.tjrj.jus.br'>
+                                    Court of Law from Rio de Janeiro</a>. Our analysis allowed us to identify crucial 
+                                    correlations that were used to develop a machine learning model. This model helped 
+                                    match the most appropriate prosecutor to each case. We then deployed this service 
+                                    as an API rest.
                                 </p>
 
                                 <button class="btn btn-primary" data-dismiss="modal" type="button"><i
@@ -685,12 +681,12 @@
                                     non-linear programs.
                                 </p>
                                 <p class="text-muted-justified">
-                                    In this project, I worked mainly on the rebuilding of video player used by Ginga.
-                                    This new video player was developed using C++, GStreamer to decode audio and video,
-                                    and Cairo to 2D rendering.
-                                    Moreover, some audio and video properties described on NCL were enabled (e.g.,
-                                    balanceLevel, trebleLevel, bassLevel, freeze).
-                                    Figure below presents Ginga playing an application.
+                                    In this project, I worked mainly with rebuilding a video player that was used by Ginga. 
+                                    It was quite a challenge, but I managed to develop a new video player using C++, GStreamer
+                                    for audio and video decoding, and Cairo for 2D rendering. I also enabled some audio and
+                                    video properties that were described on NCL, which included balanceLevel, trebleLevel,
+                                    bassLevel, and freeze. It was great to see the final result, and the figure below shows
+                                    Ginga playing an application using the new video player.
                                 </p>
                                 <img class="img-fluid d-block mx-auto" src="assets/img/projects/ginga/playing.png"
                                     alt="" />
@@ -740,20 +736,20 @@
                                     adding multimedia content (image, audio, text etc).
                                 </p>
                                 <p class="text-muted-justified">
-                                    I was the main developer of this tool.
-                                    Cacuriá was built using C++, and Qt framework, which enables the tool to be used on
-                                    different operating systems (e.g., Ubuntu, MAC OS and Windows).
-                                    Figure below presents the current Cacuria's interface used to create and manipulate
-                                    the content.
+                                    As the main developer of Cacuriá, I used C++ and the Qt framework to create a tool 
+                                    that can be used on different operating systems, including Ubuntu, MAC OS, and Windows. 
+                                    Figure below presents the current Cacuria's interface used to create and manipulate 
+                                    the content.                                    
                                 </p>
                                 <img class="img-fluid d-block mx-auto" src="assets/img/projects//cacuria/interface.png"
                                     alt="" />
                                 <p class="text-muted-justified">
-                                    Cacuriá is integrated with the iVoD (Interactive Video on Demand) service from <a
-                                        class="link" target="_blank" href="https://www.rnp.br/">RNP</a>, a National
-                                    Research and Educational Network responsible for promoting the development of
-                                    networks in Brazil, including the development of innovative applications and
-                                    services.
+                                    One of the most exciting features of Cacuriá is its integration with the iVoD 
+                                    service from <a class="link" target="_blank" href="https://www.rnp.br/">RNP</a>, 
+                                    a National Research and Educational Network responsible for promoting the 
+                                    development of networks in Brazil. RNP is committed to providing innovative 
+                                    applications and services that enhance the learning experience. Cacuriá is a perfect
+                                    example of this commitment, and I am proud to have been a part of its development.
                                 </p>
 
                                 <ul class="list-inline">
